<resources>
    <string name="app_name">Sports Connectivity</string>
    <string name="title">Title</string>
    <string name="add">Add</string>
    <string name="change_color">Change color</string>
    <string name="delete">Delete</string>
    <string name="picture">picture</string>
    <string name="title_workout">Workout</string>
    <string name="title_food">Food</string>
    <string name="title_water">Water</string>
    <string name="title_new_measurements">Measurements</string>

    <string name="all_text">all text</string>
    <string name="add_news">Add news</string>
    <string name="put_the_title_here">Put the title here</string>
    <string name="put_the_short_description_here">Put the short description here</string>
    <string name="put_the_article_here">Put the article here</string>
    <string name="detail">Detail</string>
    <string name="time">Time</string>

    <string-array name="pick_muscle_groups">
        <item>Quadriceps</item>
        <item>Hamstrings</item>
        <item>Calves</item>
        <item>Chest</item>
        <item>Back</item>
        <item>Shoulders</item>
        <item>Triceps</item>
        <item>Biceps</item>
        <item>Forearms</item>
        <item>Trapezius</item>
        <item>Abs</item>
    </string-array>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="confirm">Confirm</string>
    <string name="registration">Registration</string>
    <string name="stay_in_system">Stay in system</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_second_name">Enter second name</string>
    <string name="incorrect_e_mail">Incorrect E-mail</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="exercise_add_title">Exercise</string>
    <string name="rounds">Sets:</string>
    <string name="reps">Reps:</string>
    <string name="wzero">00</string>
    <string name="muscle_group">Muscle groups</string>
    <string name="workout_title">Workout title</string>
    <string name="weight">Weight:</string>
    <string name="pick_the_date">Pick the date</string>
    <string name="date">date</string>
    <string name="add_new_exercise">Add new exercise</string>
    <string name="pick_muscle_groups">Pick muscle groups</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_workout">Add new workout</string>

    <string name="active_user_to_log">Active U to log</string>
    <string name="all_user_to_log">All U to log</string>
    <string name="add_workouts_from_json">Add workouts from json</string>
    <string name="logoff">Logoff</string>
    <string name="title_profile">Profile</string>
    <string name="title_trainer">My trainer</string>
    <string name="profile_picture">Profile picture</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_details">Edit profile details</string>
    <string name="workout_statistics">Workout statistics</string>
    <string name="date_of_last_measurements">Last measurements -</string>
    <string name="water_balance">Water balance</string>
    <string name="receipts">Receipts</string>
    <string name="send_message">Send message</string>
    <string name="enter_message">Enter message</string>
    <string name="trainer_photo">Trainer photo</string>
    <string name="meal">Meal</string>
    <string name="food_intake">Food intake</string>
    <string name="select_gender">Select gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="enter_date_of_birth">Enter date of birth</string>
    <string name="tap_to_pick">tap to pick</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="height_cm">Height, cm</string>
    <string name="weight_kg">Weight, kg</string>
    <string name="waist_girth_cm">Waist girth, cm</string>
    <string name="neck_girth_cm">Neck girth, cm</string>
    <string name="hip_girth_cm">Hip girth, cm</string>
    <string name="body_fat">Body fat, %</string>
    <string name="bmi">BMI</string>
    <string name="add_measurement">Add measurement</string>
    <string name="start_workout">Start workout</string>
    <string name="set">Set</string>
    <string name="of">of</string>
    <string name="add_set">Add set</string>
    <string name="repetitions">Repetitions</string>
    <string name="meal_categories">Meal Categories</string>
    <string name="meal_picture">Meal picture</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="title_my_receipts">My receipts</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="workout_reminder">Workout reminder</string>
    <string name="water_balance_reminder">Water balance reminder</string>
    <string name="breakfast">Breakfast</string>
    <string name="snack">Snack</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="add_new_menu">add new menu</string>
    <string name="save">Save</string>
    <string name="post_workout">Post workout</string>

    <string-array name="exercise_measures">
        <item>kg</item>
        <item>lb</item>
    </string-array>

    <string-array name="receipt_categories">
        <item>Beef</item>
        <item>Breakfast</item>
        <item>Chicken</item>
        <item>Desert</item>
        <item>Goat</item>
        <item>Lamb</item>
        <item>Miscellaneous</item>
        <item>Pasta</item>
        <item>Pork</item>
        <item>Seafood</item>
        <item>Side</item>
        <item>Starter</item>
        <item>Vegan</item>
        <item>Vegetarian</item>
    </string-array>

    <string-array name="measurements_name">
        <item>Weight</item>
        <item>Waist Girth</item>
        <item>Neck Girth</item>
        <item>Hip Girth</item>
        <item>Body Fat</item>
        <item>BMI</item>
        <item>Height</item>
    </string-array>

    <string-array name="days_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string-array name="food_intakes">
        <item>Breakfast</item>
        <item>Snack</item>
        <item>Lunch</item>
        <item>Snack</item>
        <item>Dinner</item>
    </string-array>

</resources>
