<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_account"
        android:title="@string/title_profile"
        android:icon="@drawable/ic_account_circle_white_24dp"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_workouts"
        android:title="@string/title_workout"
        android:icon="@drawable/ic_workouts_white_24dp"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_food"
        android:title="@string/title_food"
        android:icon="@drawable/ic_food_white_24dp"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_receipts"
        android:title="@string/title_my_receipts"
        android:icon="@drawable/ic_receipt_white_24dp"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
</menu>