<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="profileModel"
            type="com.dimaoprog.sportsconnectivity.profileViews.ProfileViewModel" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_s"
            tools:context=".loginRegistrationViews.RegistrationFragment">


            <EditText
                android:id="@+id/et_first_name"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/first_name"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="text"
                android:text="@={profileModel.firstName}"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/et_second_name"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/second_name"
                android:ems="10"
                android:hint="@string/second_name"
                android:inputType="text"
                android:text="@={profileModel.secondName}"
                tools:targetApi="o" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_m"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/select_gender"
                    android:textSize="18sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@={profileModel.male}"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/radio_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@={profileModel.female}"
                        android:text="@string/female" />

                </RadioGroup>
            </LinearLayout>


            <EditText
                android:id="@+id/birth_day_picker"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_m"
                android:autofillHints="@string/date_of_birth"
                android:ems="10"
                android:hint="@string/date_of_birth"
                android:inputType="text"
                android:text="@={profileModel.birthDay}"
                android:textSize="18sp"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/et_e_mail"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/e_mail"
                android:ems="10"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:text="@={profileModel.email}"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/et_password"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/password"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="text"
                android:text="@={profileModel.password}"
                tools:targetApi="o" />

            <Button
                android:id="@+id/btn_save"
                style="@android:style/Widget.Material.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save" />
        </LinearLayout>
    </ScrollView>
</layout>