<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="workout"
            type="com.dimaoprog.sportsconnectivity.dbEntities.Workout" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/shape_card"
        android:elevation="3dp"
        android:orientation="vertical"
        android:padding="8dp"
        android:translationZ="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/title_icon"
                android:gravity="start"
                android:text="@{workout.workoutTitle}"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/title" />

            <TextView
                android:id="@+id/txt_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_title"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="32dp"
                android:layout_toStartOf="@id/title_icon"
                android:gravity="end"
                android:textSize="12sp"
                android:text="@{workout.dateOfWorkout}"
                tools:text="@string/date" />

            <ImageView
                android:id="@+id/title_icon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/picture"
                android:src="@drawable/ic_run" />

        </RelativeLayout>

        <TextView
            android:id="@+id/txt_muscle_groups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal|end"
            android:textSize="14sp"
            android:text="@{workout.muscleGroups}"
            tools:text="@string/muscle_group" />

    </LinearLayout>
</layout>